# Euler

./: Cargo.toml  README.md
Rust/: Cargo.toml  newProb
Rust/src/: prob1.rs  prob10.rs  prob11.rs  prob2.rs  prob4.rs  prob6.rs  prob7.rs  prob8.rs  prob9.rs
src/: primes.rs  prob3.rs  prob5.rs
